--- a/website.html
+++ b/website.html
@@ -1,42 +1,102 @@
-<html lang="en">
+<!DOCTYPE html>
+<html lang="nl">
 <head>
-    <link rel="stylesheet" type="text/css" href='assets/css/style.css'>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+	<meta charset="UTF-8">
+    <title>Responsive Website</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Archivo&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <div id="container">
-        <div id="grid-container">
-            <div id="geelvak">
-                <img src="assets/img/knop2.jpg" id="menu-img1">
-                
-            </div>
-            <div id="banner">
-                <img src="assets/img/knop1.jpg" id="menu-img2"> 
-            </div>
-            <div id="banner-item">
-                <img src="assets/img/logo1.jpg"id="banner-img">
-            </div>
-            <div id="rijles-img">
-                <img src="assets/img/mensen.jpg"id="mensen-img">
-            </div>
-            <div id="proefles">
-                <img src="assets/img/auto.jpg"id="auto-img">
-                
-                <h1 id="h1-proefles">proefles</h1>
-                <hr>
-            </div>
-
-        </div>
-
-
-
-
-
-
+	<div class="container">
+		<div><img class="nav1" src="assets/img/nav.png"></div>
+		    <div class="grid-container">
+				<div class="navbar">
+					<div class="dropdown">
+                        <button class="dropbutton">‎
+							<i class="fa fa-caret-down"></i>
+						</button>
+						<div class="dropdown-content">
+                            <a href="#">turbo cursus</a>
+                            <a href="#">speciale voertuigen</a>
+                            <a href="#">motor</a>
+						</div>
+                        <div class="dropdown-content">
+                            <a href="#">turbo cursus</a>
+                            <a href="#">speciale voertuigen</a>
+                            <a href="#">motor</a>
+                        </div>
+						<a href="#news">autorijbewijs</a>
+						<a href="#news">motorrijbewijs</a>
+					</div> 
+						<a href="#news">theorieles</a>
+						<a href="#news">opfriscursus</a>
+						<a href="#news">contact</a>
+				</div>
+					    <div class="banner"></div>	
+					    <div class="knop2"><img src="assets/img/knop2.jpg"></div>
+					    <div><img class="knop3" src="assets/img/knop3.png"></div>	
+					    <div><img class="knop3-1" src="assets/img/knopv3.png"></div>	
+					    <div class="knop1"><img src="assets/img/knop1.jpg"></div>
+			</div>
+				        <div><img class="banner1" src="assets/img/banner1.jpeg"></div>
+				        <div><img class="banner1-1" src="assets/img/bannerv1.jpeg"></div>
+	</div>
+<div class="grid-container2">
+	<div class="titel1"><h1>PROEFLES</h1></div>
+	<div class="lijn1-1"><hr></div>
+	<div class="p1"><p>Curabitur ligula sapien, tincidunt non, euismod vitae, posuere 
+	    imperdiet, leo. Maecenas malesuada. Praesent congue erat at massa. Sed cursus
+	    turpis vitae tortor. Donec posuere vulputate arcu. Phasellus accumsan cursus 
+	    velit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere 
+        cubilia Curae; Sed aliquam, nisi quis porttitor congue.</p>
     </div>
-</body>
+		<div class="titel2"><h1>LOCATIES</h1></div>
+			<div class="lijn2-1"><hr></div>
+				<div class="p2"><p>Curabitur ligula sapien, tincidunt non, euismod vitae, posuere 
+					imperdiet, leo. Maecenas malesuada. Praesent congue erat at massa. Sed cursus
+					turpis vitae tortor. Donec posuere vulputate arcu. Phasellus accumsan cursus 
+				    velit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere 
+                    cubilia Curae; Sed aliquam, nisi quis porttitor congue.</p>
+                </div>
+				<div class="titel3"><h1>RIJLESSEN</h1></div>
+					<div class="lijn3-1"><hr></div>
+				        <div class="p3"><p>Curabitur ligula sapien, tincidunt non, euismod vitae, posuere 
+						imperdiet, leo. Maecenas malesuada. Praesent congue erat at massa. Sed cursus
+						turpis vitae tortor. Donec posuere vulputate arcu. Phasellus accumsan cursus 
+						velit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere 
+                        cubilia Curae; Sed aliquam, nisi quis porttitor congue.</p>
+                    </div>
+					<div class="knop4-1"><p></p></div>
+						<div class="knop4"><p>GRATIS proefles</p></div>
+						    <div class="p1-1"><p>Curabitur ligula sapien, tincidunt non, euismod vitae, posuere 
+							    imperdiet, leo. Maecenas malesuada. Praesent congue erat at massa. Sed cursus
+							    turpis vitae tortor. Donec posuere vulputate arcu. Phasellus accumsan cursus 
+							    velit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere 
+                                cubilia Curae; Sed aliquam, nisi quis porttitor congue.</p>
+                            </div>
+							<div class="p2-1"><p>Curabitur ligula sapien, tincidunt non, euismod vitae, posuere 
+								imperdiet, leo. Maecenas malesuada. Praesent congue erat at massa. Sed cursus
+								turpis vitae tortor. Donec posuere vulputate arcu. Phasellus accumsan cursus 
+								velit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere 
+                                cubilia Curae; Sed aliquam, nisi quis porttitor congue.</p>
+                            </div>
+							<div class="p3-1"><p>Curabitur ligula sapien, tincidunt non, euismod vitae, posuere 
+								imperdiet, leo. Maecenas malesuada. Praesent congue erat at massa. Sed cursus
+								turpis vitae tortor. Donec posuere vulputate arcu. Phasellus accumsan cursus 
+								velit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere 
+                                cubilia Curae; Sed aliquam, nisi quis porttitor congue.</p>
+                            </div>
+    <div class="footer"></div>
+    <div class="titel1-1"><h1>proefles</h1></div>
+    <div class="lijn1-1"><hr></div>
+    <div class="titel2-1"><h1>locaties</h1></div>
+    <div class="lijn2-1"><hr></div>
+    <div class="titel3-1"><h1>rijlessen</h1></div>
+    <div class="lijn3-1"><hr></div>
+    <div class="knopvv4"><p></p></div>
+    <div class="knopp4"><p>gratis proefles</p></div>
+    <div class="footertext"><p>Timo Lemmen</p></div>
+    </div>
+</body>	
 </html>
