--- a/website.html
+++ b/website.html
@@ -94,8 +94,8 @@
     <div class="lijn2-1"><hr></div>
     <div class="titel3-1"><h1>rijlessen</h1></div>
     <div class="lijn3-1"><hr></div>
-    <div class="knopvv4"><p></p></div>
-    <div class="knopp4"><p>gratis proefles</p></div>
+    <div class="knop4-11"><p></p></div>
+    <div class="knop4-1"><p>gratis proefles</p></div>
     <div class="footertext"><p>Timo Lemmen</p></div>
     </div>
 </body>	
